<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/agenda_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/agenda_id" />

    <EditText
        android:id="@+id/agenda_id_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/agenda_id"
        android:layout_below="@+id/agenda_id"
        android:ems="10"
        android:hint="@string/agenda_id" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/agenda_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/agenda_id_txt"
        android:layout_below="@+id/agenda_id_txt"
        android:text="@string/agenda_nombre" />

    <EditText
        android:id="@+id/agenda_nombre_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/agenda_nombre"
        android:layout_below="@+id/agenda_nombre"
        android:ems="10"
        android:hint="@string/agenda_nombre" />

    <TextView
        android:id="@+id/agenda_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/agenda_nombre_txt"
        android:layout_below="@+id/agenda_nombre_txt"
        android:text="@string/agenda_direccion" />

    <EditText
        android:id="@+id/agenda_direccion_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/agenda_direccion"
        android:layout_below="@+id/agenda_direccion"
        android:ems="10"
        android:hint="@string/agenda_direccion" />

    <TextView
        android:id="@+id/agenda_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/agenda_direccion_txt"
        android:layout_below="@+id/agenda_direccion_txt"
        android:text="@string/agenda_telefono" />

    <EditText
        android:id="@+id/agenda_telefono_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/agenda_telefono"
        android:layout_below="@+id/agenda_telefono"
        android:ems="10"
        android:hint="@string/agenda_telefono" />

    <Button
        android:id="@+id/agenda_altas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/agenda_telefono_txt"
        android:layout_below="@+id/agenda_telefono_txt"
        android:text="@string/agenda_altas"
        android:onClick="alta" />

    <Button
        android:id="@+id/agenda_bajas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/agenda_altas"
        android:layout_alignBottom="@+id/agenda_altas"
        android:layout_toRightOf="@+id/agenda_altas"
        android:onClick="baja"
        android:text="@string/agenda_bajas" />

    <Button
        android:id="@+id/agenda_modificaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/agenda_bajas"
        android:layout_alignBottom="@+id/agenda_bajas"
        android:layout_toRightOf="@+id/agenda_bajas"
        android:onClick="modificacion"
        android:text="@string/agenda_modificaciones" />

    <Button
        android:id="@+id/agenda_consultas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/agenda_altas"
        android:layout_below="@+id/agenda_altas"
        android:onClick="consulta"
        android:text="@string/agenda_consultas" />

    <Button
        android:id="@+id/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/agenda_consultas"
        android:layout_alignBottom="@+id/agenda_consultas"
        android:layout_toRightOf="@+id/agenda_consultas"
        android:onClick="salir"
        android:text="@string/salir_btn" />

</RelativeLayout>